@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.tsdb.planner;
 
-import com.google.common.collect.ImmutableList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -59,7 +58,7 @@ public class TimeSeriesPlanFragmenterTest {
     LeafTimeSeriesPlanNode leafOne = createMockLeafNode("Leaf-1");
     LeafTimeSeriesPlanNode leafTwo = createMockLeafNode("Leaf-2");
     BaseTimeSeriesPlanNode nodeTwo = new MockTimeSeriesPlanNode("Node-2", Collections.singletonList(leafOne));
-    BaseTimeSeriesPlanNode nodeOne = new MockTimeSeriesPlanNode("Node-1", ImmutableList.of(nodeTwo, leafTwo));
+    BaseTimeSeriesPlanNode nodeOne = new MockTimeSeriesPlanNode("Node-1", List.of(nodeTwo, leafTwo));
     List<BaseTimeSeriesPlanNode> fragments = TimeSeriesPlanFragmenter.getFragments(nodeOne, false);
     // Test whether correct number of fragments generated
     assertEquals(fragments.size(), 3);
@@ -112,7 +111,7 @@ public class TimeSeriesPlanFragmenterTest {
     LeafTimeSeriesPlanNode leafOne = createMockLeafNode("Leaf-1");
     LeafTimeSeriesPlanNode leafTwo = createMockLeafNode("Leaf-2");
     BaseTimeSeriesPlanNode nodeTwo = new MockTimeSeriesPlanNode("Node-2", Collections.singletonList(leafOne));
-    BaseTimeSeriesPlanNode nodeOne = new MockTimeSeriesPlanNode("Node-1", ImmutableList.of(nodeTwo, leafTwo));
+    BaseTimeSeriesPlanNode nodeOne = new MockTimeSeriesPlanNode("Node-1", List.of(nodeTwo, leafTwo));
     List<BaseTimeSeriesPlanNode> fragments = TimeSeriesPlanFragmenter.getFragments(nodeOne, true);
     assertEquals(fragments.size(), 2, "Expect only 2 fragments for single-server query");
     assertEquals(fragments.get(0).getId(), "Node-1");
